# fastapi-tdd-docker

./: README.md  docker-compose.yml
.github/workflows/: main.yml
project/: .dockerignore  .flake8  Dockerfile  Dockerfile.prod  pyproject.toml  requirements.txt  setup.cfg
project/app/: config.py  db.py  main.py
project/app/api/: crud.py  summaries.py
project/tests/: conftest.py  test_summaries.py
