[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["kirill0720 <kirill.netreba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aerich = "0.7.1"
asyncpg = "0.27.0"
fastapi = "0.94.1"
gunicorn = "20.1.0"
httpx = "0.23.3"
newspaper3k = "0.2.8"
tortoise-orm = "0.19.3"
uvicorn = "0.21.1"

[tool.poetry.group.dev.dependencies]
black = "23.1.0"
flake8 = "6.0.0"
isort = "5.12.0"
pytest = "7.2.2"
pytest-cov = "4.0.0"
pytest-xdist = "3.2.1"

[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"